# foozball

./: .gitignore  .pre-commit-config.yaml  API_STANDARDS.md  CICD_PIPELINE.md  CLAUDE.md  CONFIG_MANAGEMENT.md  DATABASE_SCHEMA.md  DEVELOPMENT.md  FEATURES_PLAN.md  MONITORING_LOGGING.md  PRE_COMMIT_SETUP.md  QUICK_START.md  README.md  STATUS.md  TECH_STACK.md  TESTING.md  docker-compose.dev.yml  docker-compose.yml  test_file.py  use_gemini.md
backend/: Dockerfile  alembic.ini  conftest.py  pyproject.toml  run_alembic.py  run_tests.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  analytics.py  games.py  health.py  players.py  router.py  statistics.py  teamgames.py  teams.py
backend/app/core/: __init__.py  config.py  test_config.py
backend/app/db/: __init__.py  database.py  test_database.py
backend/app/models/: __init__.py  game.py  player.py  rating_history.py  team.py  teamgame.py
backend/app/schemas/: __init__.py  game.py  player.py  rating_history.py  statistics.py  team.py
backend/app/services/: __init__.py  trueskill_service.py
backend/app/utils/: __init__.py
backend/migrations/: env.py
backend/migrations/versions/: 0204a1c14e30_create_games_table.py  688b00e0ebbb_create_players_table.py  a470f7d40e7e_remove_elo_rating_column.py  bfe61d6de776_add_rating_history_table_for_trueskill_.py  f649a3bad5e4_add_team_and_team_games_tables.py
backend/tests/: __init__.py  fixtures.py
backend/tests/integration/: __init__.py  test_api.py  test_database.py  test_error_scenarios.py  test_fixtures_integration.py  test_game_api.py  test_game_performance.py  test_health_integration.py  test_player_api.py  test_statistics_api.py  test_team_api.py  test_trueskill_integration.py
backend/tests/unit/: __init__.py  test_config.py  test_game_endpoints.py  test_health.py  test_models.py  test_statistics.py  test_team_models.py  test_team_trueskill.py  test_trueskill_service.py
(+146 files in other folders)
